# resident-schedule

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Data_Clean.ipynb  Dockerfile  Dockerrun.aws.json  Pipfile  READMD.md  README.md  TODO.md  app.py  application.py  build.sh  conftest.py  deploy.sh  docker-compose.yml  migrate_elective_names.py  migrate_resident_flags.py  parse_excel.py  parse_schedule.py  pyproject.toml  read_database_from_excel.py  requirements.txt  resident_schedule.db  run.sh  run_docker.sh  tags  vacation_rules.md  valid_rotations.md
app/: .app.py.swp  app.py  database.py  models.py  vacation_checker.py
app/parser/: cell_parser.py  cli.py  excel_parser.py  layout_detector.py  llm_cell_parser.py  llm_excel_parser.py  rotation_map.py  row_classifier.py
app/templates/: base.html  date.html  date_picker.html  home.html  resident_picker.html  rotation_detail.html  rotation_picker.html  schedule_table.html  templates.html  vacation_checker.html
templates/: templates.html
test/: test_models.py  test_parser.py  test_vacation_checker.py
