[tool.poetry]
name = "resident-schedule"
version = "0.2.0"
description = ""
authors = ["David E. Weirich <weirich.david@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"
pyxlsb = "^1.0.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
jinja2 = "^3.1.4"
pandas = "^2.2.2"
sqlalchemy = "^2.0.30"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.3"
mypy = "^0.971"
pytest-cov = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
