[tool.poetry]
name = "resident-schedule"
version = "0.3.0"
description = ""
authors = ["David E. Weirich <weirich.david@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"
pyxlsb = "^1.0.10"
fastapi = ">=0.115"
uvicorn = ">=0.30"
jinja2 = "^3.1.4"
pandas = "^2.2.2"
sqlalchemy = "^2.0.30"

[tool.poetry.group.dev.dependencies]
black = ">=24"
flake8 = ">=7"
mypy = ">=1.10"
pytest = ">=8"
pytest-cov = ">=5"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
